Development version
===================
- Call app.make_response() on RequestHandler, to convert returned result to a
  proper response if needed.
- REMOVED tipfy.local, tipfy.request and tipfy.app. Replacements for these are:
  * tipfy.local: request.context and request.registry, dictionaries set for a
    request.
  * tipfy.request: Tipfy.request, a class attribute in the WSGI app.
  * tipfy.app: Tipfy.app, a class attribute in the WSGI app.


Version 0.5.9 - July 1st, 2010
==============================
- Small improvement in get_config(): previously when you called
  get_config without passing a key value, and the module was partially
  configured by the user, it would return only the partial configuration.
  Now if the module defaults weren't previously loaded, it will always be
  loaded and set as default in config. This way, get_config('module') will
  return the full dictionary of defaults for 'module', plus user configured
  values.

- Added argument 'loaded' to Config constructor, to set the initially loaded
  modules.

- Updated SDK URL to 1.3.5 in buildout.cfg.


Version 0.5.8 - June 30, 2010
=============================
- Added request.registry, as we slowly move away from thread-local variables.


Version 0.5.7 - June 27, 2010
=============================
- REMOVED: normalize_callable(). Unused.

- Renamed Tipfy.context to Tipfy.registry, as the purpose is to serve as a
  registry for instances reused by the app, like Jinja2 or Genshi environments.


Version 0.5.6 - June 22, 2010
=============================
- REMOVED: RegexConverter. Unused and undocumented.

- REMOVED: wsgi_app_id config key. Unused.

- Middleware lists can now also have middleware instances. This allows
  different instances of same middleware classes to be used with different
  configuration:

  my_middleware = MyMiddleware(foo='bar')

  class MyRequestHandler(RequestHandler):
      middleware = [my_middleware]

      # ...

  my_middleware2 = MyMiddleware(foo='zing')
